# bork

./: .cirrus.yml  .gitignore  .pylintrc  .readthedocs.yaml  .spelling  Dockerfile  LICENSE.txt  Pipfile  README.md  RELEASING.md  SECURITY.md  bork.py  bors.toml  build-container.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: BORK_RELEASE_TEMPLATE.md  FUNDING.yml
.github/workflows/: main.yml
bork/: __init__.py  api.py  asset_manager.py  builder.py  cli.py  config.py  creds.py  file_finder.py  filesystem.py  github.py  github_api.py  github_uploader.py  http.py  httpform.py  log.py  pypi.py  pypi_api.py  pypi_uploader.py  trusted_publishing.py  utils.py  version.py
docs/: Makefile  api.md  index.md
docs/source/: api.rst  asset_manager.rst  builder.rst  cli.rst  conf.py  config.rst  filesystem.rst  github-release-template.rst  github.rst  github_api.rst  index.rst  log.rst  modules.rst  navbar.rst  pypi.rst  pypi_api.rst  version.rst
tests/: conftest.py  helpers.py  test_aliases.py  test_builder.py  test_cmd_aliases.py  test_cmd_download.py  test_config.py  test_repos.py  utils.py
tests/fixtures/hatch-package/: pyproject.toml
tests/fixtures/minimal-package/: pyproject.toml
tests/fixtures/minimal-package/src/: __init__.py
tests/fixtures/poetry-package/: pyproject.toml
