[build-system]
# Specify the required build system.
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bork"
dynamic = ["version"]
authors = [
    {name = "Ellen Marie Dash", email = "me@duckie.co"},
]
description = "A program to help build, maintain, and release PEP 517-compliant projects."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# The packaging library is used by bork.github_api, and also pulled in via
# twine -> readme_renderer -> bleach -> packaging.
dependencies = [
    "build~=1.0.3",
    "packaging~=23.2",
    "toml~=0.10.2; python_version < '3.11'",
    "twine==4.0.1",
    "coloredlogs~=15.0.1",
    # pip is used by bork.builder._prepare_zipapp(),
    # meaning it is in fact a proper dependency.
    "pip",
    # readme-renderer is a dependency of twine.
    # With v42.0, it switched from the `bleach` library to the `nh3` library.
    # However, nh3 uses a Rust library, so it requires having Rust installed.
    "readme-renderer>=35.0,<42.0",
]

requires-python = ">= 3.8"

[project.urls]
repository = "https://github.com/duckinator/bork"
documentation = "https://bork.readthedocs.io/en/latest/"

[project.optional-dependencies]
lint = [
    "pylint==3.0.1",
    "mypy==1.5.1",
]

test = [
    "pytest==7.4.2",

    # build-system.requires for packages built during tests, including bork itself
    "setuptools >= 61", "wheel"
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-argparse",
]

[project.scripts]
bork = "bork.cli:main"

[tool.setuptools]
packages = ["bork"]

[tool.setuptools.dynamic]
version = {attr = "bork.__version__"}

[tool.bork.zipapp]
enabled = true
main = "bork.cli:zipapp_main"

[tool.bork.release]
pypi = true
github = true
github_repository = "duckinator/bork"
strip_zipapp_version = true

[tool.bork.aliases]
lint = [
    "pylint bork tests",
# TODO: Re-enable mypy after we move away from Click.
#    "mypy bork",
]
# Runs all tests.
test = "pytest --junitxml=bork-junit.xml --verbose"
# Runs fast tests.
test-fast = "pytest --verbose -m 'not slow'"
# Runs slow tests.
test-slow = "pytest --verbose -m slow"
# Build docs locally.
#docs = "sphinx-build -M dirhtml docs/source docs/build dirhtml"
docs = "sphinx-build -b html -d build/doctrees docs/source/ docs/build/"
docs-clean = "rm -rf docs/build/"
#sphinx-apidoc = "sphinx-apidoc -o ./docs/source ./bork"
