[metadata]
name = bork
version = attr: bork.__version__
author = Ellen Marie Dash
author_email = me@duckie.co
description = A program to help build, maintain, and release PEP 517-compliant projects.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/bork
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.6

# The packaging library is used by bork.github_api, and also pulled in via
# twine -> readme_renderer -> bleach -> packaging.
#
# The importlib_metadata library is required by Twine for Python 3.7 and
# earlier, but we pull it in unconditionally so the zipapp is version-agnostic.
install_requires =
    packaging==20.4
    toml==0.10.2
    pep517==0.8.2
    twine==3.2.0
    click==7.1.2
    coloredlogs==14.0
    importlib_metadata==2.0.0

tests_require =
    bork[testing]

[options.extras_require]
testing_only =
    pytest==6.1.2

testing =
    pylint==2.6.0
    pytest==6.1.2
    pytest-pylint==0.17.0
    pytest-mypy==0.7.0

[options.entry_points]
console_scripts =
    bork = bork.cli:main
