[metadata]
name = bork
version = attr: bork.__version__
author = Ellen Marie Dash
author_email = me@duckie.co
description = A program to help build, maintain, and release PEP 517-compliant projects.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/bork
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.7

# The packaging library is used by bork.github_api, and also pulled in via
# twine -> readme_renderer -> bleach -> packaging.
#
# The importlib_metadata library is required by Twine for Python 3.7 and
# earlier, but we pull it in unconditionally so the zipapp is version-agnostic.
install_requires =
    wheel==0.36.2
    build==0.1.0
    pep517==0.9.1
    packaging==20.9
    toml==0.10.2
    twine==3.4.0
    click==7.1.2
    coloredlogs==15.0
    # importlib_metadata can be removed after Python 3.7 support is dropped.
    importlib_metadata==3.7.0

tests_require =
    bork[testing]

[options.extras_require]
testing_only =
    pytest==6.2.2

testing =
    pylint==2.7.2
    pytest==6.2.2
    pytest-pylint==0.18.0
    pytest-mypy==0.8.0

[options.entry_points]
console_scripts =
    bork = bork.cli:main
