[metadata]
name = bork
version = attr: bork.__version__
author = Ellen Marie Dash
author_email = me@duckie.co
description = A program to help build, maintain, and release PEP 517-compliant projects.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/bork
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.7

# The packaging library is used by bork.github_api, and also pulled in via
# twine -> readme_renderer -> bleach -> packaging.
#
# The importlib_metadata library is required by Twine for Python 3.7 and
# earlier, but we pull it in unconditionally so the zipapp is version-agnostic.
install_requires =
    wheel~=0.38.4
    build~=0.9.0
    pep517~=0.13.0
    packaging~=21.3
    toml~=0.10.2
    twine~=4.0.1
    click~=8.1.3
    coloredlogs~=15.0.1
    # importlib_metadata can be removed after Python 3.7 support is dropped.
    importlib_metadata

tests_require =
    bork[testing]

[options.extras_require]
testing_only =
    pytest==7.2.0

testing =
    pylint==2.15.5
    pytest==7.2.0
    pytest-pylint==0.19.0
    pytest-mypy==0.10.1

[options.entry_points]
console_scripts =
    bork = bork.cli:main
